fix footer on tablet

--- a/stylesheet.less
+++ b/stylesheet.less
@@ -464,7 +464,7 @@ hr {
     display: inline-block;
     width: 100%;
     padding: 30px 0;
-    @media @tablet {
+    @media screen and (max-width: 700px) {
         text-align: center;
         .tweet-wrap.twitter__tweet-wrap {
             text-align: left;
@@ -504,6 +504,7 @@ hr {
         &.col1 {
             float: left;
             padding-right: 20px;
+            text-align: left;
         }
         &.col2 {
             float: right;
